PROJECT(queue)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-W -g -DLINUX -pthread")

FILE(GLOB_RECURSE MAIN_LIST 	"main/*.c")

FILE(GLOB_RECURSE HEADER_LIST "*.h")
SET (INCLUDE_DIRS "")
FOREACH(_HEADERFILE ${HEADER_LIST})
	GET_FILENAME_COMPONENT(_DIR ${_HEADERFILE} PATH)
	LIST(APPEND INCLUDE_DIRS ${_DIR})
ENDFOREACH()

LIST(REMOVE_DUPLICATES INCLUDE_DIRS)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

ADD_EXECUTABLE(test "main/main.c")
